fixed layout bug in IE

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -5,6 +5,7 @@ header {
   border-bottom: 1px solid lighten($color-ambient-mint, 18);
   color: grey;
   z-index: 4;
+  display: block;
   .titleImg {
 
   }
